test/fails/ir/wrongargs.ir.interpret
Provided 1 argument(s) to function "foo", which takes 0!
